# hap-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  LICENSE-MIT  README.md  build.rs  default.metadata.json  metadata_hash  rls.toml  rustfmt.toml
.github/workflows/: ci.yml
codegen/: Cargo.toml
codegen/src/: main.rs
examples/: adding_accessories_dynamically.rs  air_purifier.rs  air_quality_sensor.rs  async_callbacks.rs  bridged_accessories.rs  callbacks.rs  carbon_dioxide_sensor.rs  carbon_monoxide_sensor.rs  contact_sensor.rs  cooler.rs  custom_characteristics_services_accessories.rs  custom_multi_sensor.rs  dehumidifier.rs  door.rs  doorbell.rs  fan.rs  fan_v2.rs  faucet.rs  garage_door_opener.rs  heater.rs  heater_cooler.rs  humidifier.rs  humidifier_dehumidifier.rs  humidity_sensor.rs  irrigation_system.rs  leak_sensor.rs  light_sensor.rs  lightbulb.rs  lock.rs  motion_sensor.rs  occupancy_sensor.rs  outlet.rs  security_system.rs  setting_values_after_server_start.rs  shower_head.rs  smart_speaker.rs  smoke_sensor.rs  sprinkler.rs  stateful_programmable_switch.rs  stateless_programmable_switch.rs  (+9 more)
examples/special/: adding_accessories_dynamically.rs  bridged_accessories.rs  setting_values_after_server_start.rs
src/: accessory.rs  characteristic.rs  config.rs  error.rs  event.rs  hap_type.rs  lib.rs  main.rs  pairing.rs  pin.rs  pointer.rs  service.rs  tlv.rs
src/accessory/: bridge.rs  category.rs  mod.rs  outlet.rs
src/accessory/defined/: bridge.rs  faucet.rs  heater_cooler.rs  ip_camera.rs  irrigation_system.rs  lightbulb.rs  lock.rs  mod.rs  shower_head.rs  television.rs  video_doorbell.rs
src/characteristic/: firmware_revision.rs  identify.rs  manufacturer.rs  mod.rs  mod_new.rs  model.rs  name.rs  on.rs  outlet_in_use.rs  serial_number.rs
src/db/: accessory_list.rs  context.rs  database.rs  entity.rs  file_storage.rs  mod.rs  storage.rs
src/protocol/: context.rs  device.rs  mod.rs  pairing.rs  secured_device.rs  tlv.rs
src/server/: identifier_cache.rs  ip.rs  mod.rs
src/service/: accessory_information.rs  mod.rs  outlet.rs
src/storage/: accessory_database.rs  accessory_list.rs  file_storage.rs  mod.rs  storage.rs
src/transport/: accessory_list.rs  bonjour.rs  ip.rs  mdns.rs  mod.rs  tcp.rs  tlv.rs
src/transport/http/: encrypted_stream.rs  mod.rs  router.rs  server.rs
src/transport/http/handler/: accessories.rs  characteristics.rs  identify.rs  mod.rs  pair_setup.rs  pair_verify.rs  pairings.rs
src/transport/http/handlers/: accessories.rs  characteristics.rs  identify.rs  mod.rs  pair_setup.rs  pair_verify.rs  pairings.rs
