[package]
authors = ["Elias Wilken <elias@wlkn.io>"]
description = "Rust implementation of the Apple HomeKit Accessory Protocol (HAP)"
documentation = "https://docs.rs/hap"
edition = "2018"
keywords = ["apple", "homekit"]
license = "MIT/Apache-2.0"
name = "hap"
readme = "README.md"
repository = "https://github.com/ewilken/hap-rs"
version = "0.1.0-pre.2"

[dependencies]
aead = "0.3"
async-trait = "0.1"
byteorder = "1.3"
bytes = "0.5"
chacha20poly1305 = "0.5"
ed25519-dalek = {version = "1.0.0-pre.4", features = ["std", "serde"]}
erased-serde = "0.3"
eui48 = {version = "1.0", features = ["serde"]}
futures = "0.3"
hyper = "0.13"
libmdns = "0.2"
log = "0.4"
num = "0.2"
rand = "0.7"
ring = "0.14"
serde = {version = "1.0", features = ["rc", "derive"]}
serde_json = "1.0"
sha2 = "0.8"
signature = "1.1"
srp = "0.4"
thiserror = "1.0"
tokio = {version = "0.2", features = ["full"]}
url = "2.1"
uuid = {version = "0.8", features = ["v4", "serde"]}
x25519-dalek = "0.6"

[build-dependencies]
handlebars = "2.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
uuid = {version = "0.8", features = ["v4", "serde"]}

[dev-dependencies]
env_logger = "0.7"
