[package]
name = "hap"
version = "0.1.0-pre.7"
authors = ["Elias Wilken <elias@wlkn.io>"]
edition = "2018"
description = "Rust implementation of the Apple HomeKit Accessory Protocol (HAP)"
documentation = "https://docs.rs/hap"
readme = "README.md"
repository = "https://github.com/ewilken/hap-rs"
license = "MIT/Apache-2.0"
keywords = ["apple", "homekit"]
exclude = [
    ".github",
    ".gitignore",
    "examples",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md",
    "rls.toml",
    "rustfmt.toml",
]

[dependencies]
aead = "0.3"
async-trait = "0.1"
byteorder = "1.3"
bytes = "0.5"
chacha20poly1305 = "0.5"
ed25519-dalek = { version = "1.0", features = ["std", "serde"] }
erased-serde = "0.3"
eui48 = { version = "1.0", features = ["serde"] }
futures = "0.3"
hkdf = "0.10"
hyper = { version = "0.14", features = ["server", "http1", "http2"] }
libmdns = "0.6"
log = "0.4"
num = "0.2"
rand = "0.7"
serde = { version = "1.0", features = ["rc", "derive"] }
serde_json = "1.0"
sha2 = "0.9"
signature = "1.1"
srp = "0.5"
thiserror = "1.0"
tokio = { version = "1.6", features = ["rt", "net", "time", "macros"] }
url = "2.1"
uuid = { version = "0.8", features = ["v4", "serde"] }
x25519-dalek = "0.6"

[build-dependencies]
handlebars = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4", "serde"] }

[dev-dependencies]
env_logger = "0.8"
tokio = { version = "1.6", features = ["rt-multi-thread", "time"] }

[workspace]
members = ["codegen"]
