[package]
name = "hap"
version = "0.1.0-pre.15"
authors = ["Elias Wilken <elias@wlkn.io>"]
edition = "2021"
description = "Rust implementation of the Apple HomeKit Accessory Protocol (HAP)"
documentation = "https://docs.rs/hap"
readme = "README.md"
repository = "https://github.com/ewilken/hap-rs"
license = "MIT/Apache-2.0"
keywords = ["apple", "homekit"]
exclude = [
    ".github",
    ".gitignore",
    "examples",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md",
    "rls.toml",
    "rustfmt.toml",
]

#[features]
#not-embedded = ["ed25519-dalek", "get_if_addrs", "hyper"]

[dependencies]
aead = "0.5"
async-trait = "0.1"
byteorder = "1.3"
bytes = "1.0"
chacha20poly1305 = "0.10.1"
erased-serde = "0.3"
macaddr = { version = "1.0.1", features = ["serde"] }
futures = "0.3"
hkdf = "0.11"
log = "0.4"
num = "0.2"
serde = { version = "1.0", features = ["rc", "derive"] }
serde_json = "1.0"
sha2 = "0.9"
signature = "2.1.0"
srp = "0.5"
thiserror = "1.0"
tokio = { version = "1.28.1", features = ["rt"] }
url = "2.1"
uuid = { version = "1.3", features = ["serde", "v4"] }
rand = "0.8.5"

ed25519-dalek = { version = "2.0.0-rc.2", features = ["serde", "std"] }
x25519-dalek = "2.0.0-rc.2"

hyper = { version = "0.14", features = ["server", "http1"] }
get_if_addrs = { version = "0.5", optional = true }
libmdns = { version = "0.6", optional = true }

cfg-if = "0.1"

[build-dependencies]
handlebars = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }

[dev-dependencies]
env_logger = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.8", features = ["rt-multi-thread", "time", "macros"] }

[workspace]
members = ["codegen"]
