[package]
name = "hap-codegen"
version = "0.1.0-pre.8"
authors = ["Elias Wilken <elias@wlkn.io>"]
edition = "2018"
description = "Rust implementation of the Apple HomeKit Accessory Protocol (HAP)"
documentation = "https://docs.rs/hap"
readme = "README.md"
repository = "https://github.com/ewilken/hap-rs"
license = "MIT/Apache-2.0"
keywords = ["apple", "homekit"]
publish = false

[dependencies]
handlebars = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4", "serde"] }
